# rust-injectable-dll

./: Cargo.toml
src/: dllmain.rs  lib.rs
